--- a/isiefinal/isieref.bib
+++ b/isiefinal/isieref.bib
@@ -313,7 +313,6 @@ author = {Gohil, Ghanshyamsinh and Bede, Lorand and Teodorescu, Remus and Kereke
 file = {:E$\backslash$:/mendeley/Gohil et al/Unknown/07041953.pdf:pdf},
 isbn = {9781479963737},
 title = {{Analytical Method to Calculate the DC Link Current Stress in Voltage Source Converters}},
-url = {http://vbn.aau.dk/files/213686483/Analytical{\_}Method{\_}to{\_}Calculate{\_}the{\_}DC{\_}Link{\_}Current{\_}Stress{\_}in{\_}Voltage{\_}Source{\_}Converters.pdf},
 year = {2014}
 }
 @article{Paper2013,
@@ -966,18 +965,23 @@ year = {2015}
 }
 
 
-
-
-@INPROCEEDINGS{7352968,
-author={S. M. Lambert and B. C. Mecrow and R. Abebe and G. Vakil and C. M. Johnson},
-booktitle={2015 IEEE Vehicle Power and Propulsion Conference (VPPC)},
-title={Integrated Drives for Transport - A Review of the Enabling Thermal Management Technology},
-year={2015},
-pages={1-6},
-keywords={electric drives;thermal management (packaging);transportation;electric drive;electronic subsystem integration;mechanical subsystem integration;thermal management technology;transport application;Actuators;Cooling;Drives;Electronic packaging thermal management;Power electronics;Thermal management},
-doi={10.1109/VPPC.2015.7352968},
-month={Oct},}
-
+@article{Lambert2015b,
+abstract = {The space and packaging constraints for various electric transport applications such as for electric and hybrid electric vehicles or mass transit systems ultimately require that electronic and mechanical subsystems become more fully integrated. This paper outlines the current state of art for the power electronic converter technologies which enables greater integration in electric drives. Investigations into the supply options, state of the art devices, switching frequency selection, filtering requirements and system modularity options are explored and future trends are discussed.},
+author = {Lambert, Simon M. and Mecrow, Barrie C. and Abebe, Robert and Vakil, Gaurang and Johnson, C. Mark},
+journal = {2015 IEEE Vehicle Power and Propulsion Conference (VPPC)},
+doi = {10.1109/VPPC.2015.7352968},
+file = {:E$\backslash$:/mendeley/Lambert et al/IEEE Vehicle Power and Propulsion Conference/Lambert et al. - 2015 - Integrated Drives for Transport - A Review of the Enabling Electronics Technology(3).pdf:pdf},
+isbn = {978-1-4673-7637-2},
+keywords = {Actuators,IMMD,Power electronics,Power harmonic filters,Rectifiers,Standards,Topology,Variable speed drives,electric drive integration,electric drives,electric transport application,electric vehicles,electronic subsystem,electronics technology,filtering requirement,mechanical subsystem,packaging constraint,power electronic converter technology,power electronics,space constraint,switching convertors,switching frequency selection,system modularity option,thermal},
+mendeley-groups = {IMMD},
+mendeley-tags = {IMMD,thermal},
+month = {oct},
+pages = {1--6},
+publisher = {IEEE},
+title = {{Integrated Drives for Transport - A Review of the Enabling Thermal Management Technology}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7352967 http://ieeexplore.ieee.org/document/7352968/},
+year = {2015}
+}
 
 
 
@@ -988,4 +992,13 @@ keywords = {IMMD,capacitor,device,integration,spatial,thermal,topology},
 mendeley-tags = {IMMD,capacitor,device,integration,spatial,thermal,topology},
 title = {{Mecrow , Barrie ( 2016 ) Integrated motor drives : state of the art and future trends . IET Electric Power Applications}},
 year = {2016}
+}
+
+@misc{Polypropylene2009,
+author = {TDK},
+file = {:C$\backslash$:/Users/ugurm/Desktop/ISIE 2017/datasheet/MKP{\_}B32674{\_}678-1.pdf:pdf},
+mendeley-groups = {IMMD/DC Bus},
+number = {May},
+title = {{Film Capacitors, Metallized Polypropylene Film Capacitors (MKP) - B32674...B32674 Datasheet}},
+year = {2015}
 }
