Monthly plan updated.

--- a/Thesis/PhD Thesis/Latex Files/thesis.tex
+++ b/Thesis/PhD Thesis/Latex Files/thesis.tex
@@ -85,7 +85,7 @@
 %
 % IMPORTANT: If you are Ph.D. student your co-supervisor can not be in your 
 % examination committee.
-\committeememberiii[prof]{Jüri}
+\committeememberiii[prof]{Işık Çadırcı}
 \affiliationiii{JüriBölüm, METU}
 % Fourth committee member
 \committeememberiv[assocprof]{Jüri}
